Add configuration from environment

--- a/CityInfo.API/appSettings.json
+++ b/CityInfo.API/appSettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "mailSettings": {
-    "mailToAddress":  "developer@visitview.com",
-    "mailFromAddress":  "no-reply@visitview.com"
+    "mailToAddress": "developer@visitview.com",
+    "mailFromAddress": "no-reply@visitview.com"
+  },
+  "connectionStrings": {
+    "cityInfoDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=CityInfoDB;Trusted_Connection=True"
   }
 }
